-------------------------------------------------------------------------------
Changes in version 0.76

- Fixed missing "OK" bug in imapfront-auth.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.75

- Modified pop3front to log all commands and responses.

- Added support for $SMTPGREETING to smtpfront.

- Added an IMAP front end.  Works with Courier IMAP presently.

- Switched to using external bglibs.

- smtpfront rejects bounce messages with multiple recipients.  See
  http://www.ornl.gov/its/archives/mailing-lists/qmail/2001/12/msg00405.html

- Added a session timeout, controlled by $SESSION_TIMEOUT, defaults to
  24 hours.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.74

- Modified quit code in pop3front to properly tag only read messages as
  "read".

- Implemented the obsolete LAST command.

- Messages are now sorted in numerical order of their UID.

- Added an exit hook to both pop3front and smtpfront to print the number
  of bytes input and output.

- Fixed a one-off bug in handling "@domain" entries in badmailfrom in
  smtpfront-qmail.

- pop3front-auth now logs the user name.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.73

- Fixed bugs in the RETR/TOP function of pop3front-maildir which would
  cause message corruption.

- Fixed bugs in the DELE/STAT functions of pop3front-maildir which
  neglected to remove the deleted message count/bytes from the totals
  reported by STAT.
