@@ -3,6 +3,8 @@ Changes in version 0.76
 
 - Fixed missing "OK" bug in imapfront-auth.
 
+- Log SASL authenticated username.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
